--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ ExtendableGrids = "cfc395e8-590f-11e8-1f13-43a2532b2fa8"
 GradientRobustMultiPhysics = "0802c0ca-1768-4022-988c-6dd5f9588a11"
 GridVisualize = "5eed8a63-0fb0-45eb-886d-8d5a387d12b8"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Pardiso = "46dd5b70-b6fb-5a00-ae2d-e8fea33afaf2"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 SimplexGridFactory = "57bfcd06-606e-45d6-baf4-4ba06da0efd5"
 TetGen = "c5d3f3f7-f850-59f6-8a2e-ffc6dc1317ea"
@@ -17,9 +18,10 @@ Triangulate = "f7e6ffb2-c36d-4f8f-a77e-16e897189344"
 
 [compat]
 ExtendableGrids = "0.8.8"
-GradientRobustMultiPhysics = "0.7.13"
+GradientRobustMultiPhysics = "0.7.15"
 GridVisualize = "0.3.9"
 SimplexGridFactory = "0.5.10"
 TetGen = "1.3"
 Triangulate = "2.1"
+Pardiso = "0.5.3"
 julia = "^1.6"
