added polarisation solve to low level solve, low level automatic differentiation of involved operators (still one tiny allocation when getting the jacobian)

--- a/Project.toml
+++ b/Project.toml
@@ -5,15 +5,20 @@ version = "0.1.0"
 
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DiffResults = "163ba53b-c6d8-5494-b064-1a9d43ac40c5"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 ExtendableGrids = "cfc395e8-590f-11e8-1f13-43a2532b2fa8"
 ExtendableSparse = "95c220a8-a1cf-11e9-0c77-dbfce5f500b3"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GradientRobustMultiPhysics = "0802c0ca-1768-4022-988c-6dd5f9588a11"
 GridVisualize = "5eed8a63-0fb0-45eb-886d-8d5a387d12b8"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Pardiso = "46dd5b70-b6fb-5a00-ae2d-e8fea33afaf2"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 SimplexGridFactory = "57bfcd06-606e-45d6-baf4-4ba06da0efd5"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+SparseDiffTools = "47a9eef4-7e08-11e9-0b38-333d64bd3804"
+Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 TetGen = "c5d3f3f7-f850-59f6-8a2e-ffc6dc1317ea"
 Triangulate = "f7e6ffb2-c36d-4f8f-a77e-16e897189344"
 
