Minor edits to grid.jl

--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,8 @@ GradientRobustMultiPhysics = "0802c0ca-1768-4022-988c-6dd5f9588a11"
 GridVisualize = "5eed8a63-0fb0-45eb-886d-8d5a387d12b8"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Pardiso = "46dd5b70-b6fb-5a00-ae2d-e8fea33afaf2"
+PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
+PlutoVista = "646e1f28-b900-46d7-9d87-d554eb38a413"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 SimplexGridFactory = "57bfcd06-606e-45d6-baf4-4ba06da0efd5"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
