--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ ExtendableSparse = "95c220a8-a1cf-11e9-0c77-dbfce5f500b3"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GradientRobustMultiPhysics = "0802c0ca-1768-4022-988c-6dd5f9588a11"
 GridVisualize = "5eed8a63-0fb0-45eb-886d-8d5a387d12b8"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Pardiso = "46dd5b70-b6fb-5a00-ae2d-e8fea33afaf2"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
@@ -28,7 +29,7 @@ XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [compat]
 ExtendableGrids = "0.9.17"
-GradientRobustMultiPhysics = "0.11.3"
+GradientRobustMultiPhysics = "0.12"
 GridVisualize = "1.1.7"
 Pardiso = "0.5.3"
 SimplexGridFactory = "0.5.10"
