--- a/Project.toml
+++ b/Project.toml
@@ -29,12 +29,12 @@ Triangulate = "f7e6ffb2-c36d-4f8f-a77e-16e897189344"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [compat]
-ExtendableFEM = "^0.2"
-ExtendableFEMBase = "^0.2"
-ExtendableGrids = "^1.2.0"
+ExtendableFEM = "^0.3.0"
+ExtendableFEMBase = "^0.3.1"
+ExtendableGrids = "^1.5.0"
 GridVisualize = "1.1.7"
 Pardiso = "0.5.3"
-SimplexGridFactory = "0.5.10"
+SimplexGridFactory = "^2.0.1"
 TetGen = "1.3"
 Triangulate = "2.1"
 julia = "^1.6"
