--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DiffResults = "163ba53b-c6d8-5494-b064-1a9d43ac40c5"
+DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 ExtendableFEM = "a722555e-65e0-4074-a036-ca7ce79a4aed"
 ExtendableFEMBase = "12fb9182-3d4c-4424-8fd1-727a0899810c"
@@ -34,6 +35,7 @@ XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 ExtendableFEM = "^0.5.0"
 ExtendableFEMBase = "^0.6"
 ExtendableGrids = "^1.5.0"
+DocStringExtensions = "0.8,0.9"
 GridVisualize = "1.1.7"
 Pardiso = "0.5.3"
 SimplexGridFactory = "^2.0.1"
