--- a/Project.toml
+++ b/Project.toml
@@ -33,12 +33,12 @@ XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [compat]
 DocStringExtensions = "0.8,0.9"
-ExtendableFEM = "^0.7"
-ExtendableFEMBase = "^0.7"
-ExtendableGrids = "^1.9.2"
-GridVisualize = "1.1.7"
+ExtendableFEM = "^0.8"
+ExtendableFEMBase = "0.8.1"
+ExtendableGrids = "^1.10.3"
+GridVisualize = "1.8.1"
 Pardiso = "0.5.3"
 SimplexGridFactory = "^2.0.1"
 TetGen = "1.3"
 Triangulate = "2.1"
-julia = "^1.6"
+julia = "^1.9"
